# 2DPhysicsEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
src/math/: CMakeLists.txt  common.cpp  common.h  point2.cpp  point2.h  vector2.cpp  vector2.h
src/physics_world/: CMakeLists.txt  arena.cpp  arena.h  physics_world.cpp  physics_world.h
src/rendering/: CMakeLists.txt  half_color_circle.cpp  half_color_circle.h
src/rigid_body/: CMakeLists.txt  circle_body.cpp  circle_body.h  rectangle_body.cpp  rectangle_body.h  rigid_body.cpp  rigid_body.h  static_body.cpp  static_body.h  static_circle_body.cpp  static_circle_body.h  static_rectangle_body.cpp  static_rectangle_body.h
